--- a/README.html
+++ b/README.html
@@ -1,5 +1,4 @@
-# Descendants-2
-<!DOCTYPE html>
+Descendants-2
 <html>
 <body>
 <p>The first song im gonna show you is my favorite song in descendants 2</p>
